--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -18,6 +18,7 @@ body {
   background-color: var(--gray-6);
   font-family: "JetBrains Mono", monospace;
   line-height: 2rem;
+  letter-spacing: 2rem;
   background-color: var(--gray-5);
 }
 header {
