--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -1,5 +1,20 @@
 @import url("https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100;0,300;0,400;0,800;1,100;1,300;1,400;1,800&display=swap");
 
+/* 英語の設定 */
+:not(.ja) {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+  letter-spacing: 0.05rem;
+  line-height: 1.5;
+}
+
+/* 日本語の設定 */
+.ja {
+  font-family: YuGothic, "Yu Gothic", "Hiragino Kaku Gothic ProN", "Hiragino Sans", "ヒラギノ角ゴ ProN W3", "メイリオ", Meiryo, sans-serif;
+  letter-spacing: 0.14rem;
+  line-height: 1.24;
+}
+
+
 * {
   font-family: inherit;
   text-decoration: none;
@@ -18,7 +33,6 @@ body {
   background-color: var(--gray-6);
   font-family: "JetBrains Mono", monospace;
   line-height: 2rem;
-  letter-spacing: 2rem;
   background-color: var(--gray-5);
 }
 header {
