--- a/_includes/category-modal.html
+++ b/_includes/category-modal.html
@@ -1,5 +1,6 @@
-<section id="category-modal-bg"></section>
+<!--<section id="category-modal-bg"></section>
 <section id="category-modal">
+  <div class="category-modal-name">カテゴリ</div>
   <h1 id="category-modal-title"></h1>
   <section id="category-modal-content"></section>
-</section>
+</section>-->
