--- a/assets/css/syntax.css
+++ b/assets/css/syntax.css
@@ -1,3 +1,12 @@
+@import url("https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,200;0,400;0,800;1,100;1,400;1,700&display=swap");
+
+code,
+code *,
+pre,
+pre * {
+  font-family: "JetBrains Mono", monospace;
+}
+
 /* syntax */
 
 .highlight .hll {
