--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,19 +1,14 @@
+{% if page.layout == "autopage_category" %}
 <header>
-  <a class="site-title" href="{{site.baseurl}}/">{{site.title}}</a>
-  <!-- dark/light mode -->
-  <span id="dark-mode-toggle" style="cursor: pointer">
-    <svg
-      stroke="currentColor"
-      fill="currentColor"
-      stroke-width="0"
-      viewBox="0 0 16 16"
-      height="1.2em"
-      width="1.2em"
-      xmlns="http://www.w3.org/2000/svg"
-    >
-      <path
-        d="M8 1a7 7 0 1 0 0 14A7 7 0 0 0 8 1zm0 13V2a6 6 0 1 1 0 12z"
-      ></path>
-    </svg>
-  </span>
+  <a class="site-title category-page" href="{{ site.baseurl }}/">{{ site.title }}</a>
 </header>
+{% elsif page.layout == "post" %}
+<header>
+  <a class="site-title article-page" href="{{ site.baseurl }}/">{{ site.title }}</a>
+</header>
+{% else %}
+<header>
+  <a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a>
+</header>
+{% endif %}
+
