--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -1,26 +1,69 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="jp">
   {% include head.html %}
   <body>
-    <main>
+    <main class="blogfeed">
       {% include header.html %} {% include bio.html %}
-      <section class="articles">
+      <section id="articles">
         {% for post in site.posts %}
+        {% if post.thumbnail %}
         <article class="article">
-          <h2 class="article-title">
-            <a href="{{site.baseurl}}{{post.url}}"> {{post.title}} </a>
-          </h2>
-          <small class="date">{{post.date | date_to_string}}</small>
-          <div class="categories">
-            {% for c in post.categories %}
-            <a href="#!" data-base-url="{{site.baseurl}}" class="category"
-              >{{c}}</a
-            >
-            {% endfor %}
+          <div class="article-top">
+            <div
+              class="article-thumbnail"
+              style="
+                background-image: url('../../{{ post.thumbnail }}');">
+            
+              
+            </div>
+          </div>
+          <div class="article-bottom">
+            <div class="article-title">
+              <a href="{{site.baseurl}}{{post.url}}">{{post.title}}</a>
+            </div>
+            <small class="article-date">{{post.date | date_to_string}}</small>
+            <div class="article-categories">
+              <div class="article-categories">
+                {% for c in post.categories %}
+                <h1>
+                  <a
+                    href="{{site.baseurl}}/category/{{c | slugify}}"
+                    data-base-url="{{site.baseurl}}"
+                    class="article-category"
+                    > {{ post.cat-name }}</a>
+                </h1>
+                {% endfor %}
+              </div>
+            </div>
           </div>
         </article>
-        {%endfor%}
+        {% else %}
+        <article class="article">
+          <h2 class="article-top">
+            <div class="article-title">
+              <a href="{{site.baseurl}}{{post.url}}">{{post.title}}</a>
+            </div>
+          </h2>
+          <div class="article-bottom">
+            <small class="article-date">{{post.date | date_to_string}}</small>
+            <div class="article-categories">
+              <div class="article-categories">
+                {% for c in post.categories %}
+                <a
+                  href="{{site.baseurl}}/category/{{c | slugify}}"
+                  data-base-url="{{site.baseurl}}"
+                  class="article-category"
+                  > {{ post.cat-name }}</a
+                >
+                {% endfor %}
+              </div>
+            </div>
+          </div>
+        </article>
+        {% endif %}
       </section>
+      {% endfor %}
+      <!--  -->
       {% include footer.html %}
     </main>
     {% include category-modal.html%}
