--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -1,63 +1,14 @@
-:root {
-  --gray-1: #3f3f3f;
-  --gray-2: #32353a;
-  --gray-3: #25282c;
-  --gray-4: #151618;
-  --gray-5: #151618;
-  --gray-6: #111111;
-  --white-1: #eeeeee;
-  --white-2: #a9abb3;
+hr {
+  border-top: 5px dashed var(--dm-contrast) !important;
+  border-bottom: none !important;
+  border-left: none !important;
+  border-right: none !important;
+  margin-bottom: 1.75rem !important;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    --gray-1: #3f3f3f;
-    --gray-2: #32353a;
-    --gray-2_5: #242526;
-    --gray-3: #e8e8e8;
-    --gray-4: #eeeeee;
-    --gray-5: #f5f5f5;
-    --gray-6: #a9abb3;
-    --white-1: #242526;
-    --white-2: #242526;
-  }
-}
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --gray-1: #3f3f3f;
-    --gray-2: #32353a;
-    --gray-3: #25282c;
-    --gray-4: #151618;
-    --gray-5: #151618;
-    --gray-6: #111111;
-    --white-1: #eeeeee;
-    --white-2: #a9abb3;
-  }
-}
 
-[data-theme="light"] {
-  --gray-1: #3f3f3f;
-  --gray-2: #32353a;
-  --gray-2_5: #242526;
-  --gray-3: #e8e8e8;
-  --gray-4: #eeeeee;
-  --gray-5: #f5f5f5;
-  --gray-6: #a9abb3;
-  --white-1: #242526;
-  --white-2: #242526;
-}
-
-[data-theme="dark"] {
-  --gray-1: #3f3f3f;
-  --gray-2: #32353a;
-  --gray-3: #25282c;
-  --gray-4: #151618;
-  --gray-5: #151618;
-  --gray-6: #111111;
-  --white-1: #eeeeee;
-  --white-2: #a9abb3;
-}
+/* cat modal */
 
 #category-modal-bg {
   position: fixed;
@@ -65,12 +16,11 @@
   left: 0;
   bottom: 0;
   right: 0;
-  background: rgba(0, 0, 0, 0.6);
+  background: rgba(50, 64, 94, 0.6);
   z-index: 10;
   display: none;
   visibility: hidden;
 }
-
 #category-modal {
   position: fixed;
   top: 0;
@@ -83,54 +33,105 @@
   border-radius: 1rem;
   padding: 1rem;
   margin: auto;
-  background: var(--gray-3);
+  background: var(--bg-dm-secondary);
   display: none;
   visibility: hidden;
   line-height: 140%;
 }
-
 #category-modal-content {
   display: relative;
   max-height: calc(100% - 5rem);
   overflow: auto;
 }
-
 #category-modal-title {
   margin-bottom: 1rem;
-  font-size: 2rem;
-  padding: 1rem;
+  font-size: 1.4rem;
+  padding: 0 1rem;
 }
-
 #category-modal-bg.open,
 #category-modal.open {
   display: block;
   visibility: visible;
 }
-
 .modal-article,
 .modal-article-date {
   display: block;
-  color: var(--white-2);
+  color: var(--text-dm-secondary);
 }
-
 .modal-article {
   margin-bottom: 0.5rem;
   padding: 0.5rem 1rem;
   transition: all 0.2s ease-in-out;
 }
 
+.modal-article h4{
+  color:var(--text-dm-primary);
+  font-weight:400;
+  font-size: 0.8em;
+  line-height:1.4;
+  text-decoration:underline;
+}
+
 .modal-article-date {
-  font-size: 0.8rem;
+  font-size: 0.6rem;
 }
-
 .modal-article:hover {
-  background: var(--gray-4);
+  background: var(--bg-dm-primary);
 }
 
-hr {
-  border-top: 2px dashed var(--white-2) !important;
-  border-bottom: none !important;
-  border-left: none !important;
-  border-right: none !important;
-  margin-bottom: 1.75rem !important;
+.category-modal-name{
+  font-size:0.8em;
+  padding: 0 1rem;
+}
+
+.breadcrumb {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.breadcrumb li {
+  display: inline;/*横に並ぶように*/
+  list-style: none;
+  font-weight: bold;/*太字*/
+}
+
+.breadcrumb li:after {/* >を表示*/
+  content: '>';
+  padding: 0 0.2em;
+  color: var(--text-dm-secondary);
+}
+
+.breadcrumb li:last-child:after {
+  content: '';
+}
+
+.breadcrumb li a {
+  text-decoration: none;
+  color: var(--text-dm-secondary);/*色*/
+  font-size:0.8rem;
+}
+
+.breadcrumb li a:hover {
+  text-decoration: underline;
+}
+
+/* queries */
+
+@media screen and (max-width: 750px) {
+  main {
+    padding: 1.5rem;
+  }
+}
+
+@media screen and (max-width: 650px) {
+  a.site-title {
+    font-size: 2.5rem !important;
+  }
+  .site-title.article-page {
+    font-size: 1.6rem !important;
+  }
+  footer {
+    font-size: 0.8rem !important;
+  }
 }
