--- a/_includes/social-links.html
+++ b/_includes/social-links.html
@@ -1,7 +1,8 @@
 <section id="social-links">
 {% for i in site.data.author.contact %}
-  <!--<a href="{{i.url}}" target="_blank">
+
+<a href="{{i.url}}" target="_blank">
     <img src="{{site.baseurl}}/assets/icons/{{i.title}}.svg" alt="" />
-  </a>-->
+  </a>
 {%endfor%}
 </section>
