--- a/_includes/head.html
+++ b/_includes/head.html
@@ -16,7 +16,7 @@
   <link rel="icon" href="/assets/icons/favicon.ico">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Cherry+Bomb+One&family=Noto+Sans+JP:wght@100..900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Syncopate:wght@400;700&family=Noto+Sans+JP:wght@100..900&display=swap" rel="stylesheet">
 
   <title> {{page.title}}</title>
   <meta content="{{ site.title }}" property="og:site_name" />
